Primeira section finalizada, com a responsividade

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
       <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
       <!--meu-->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@1,300&family=Roboto:wght@300&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
 
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
@@ -42,19 +42,19 @@
                                     <li><a style="color: #2a81ea !important; background-color: unset;" class="getstarted scrollto" href="#">About COVID-19 <i class="ml-13 fas fa-arrow-right"></i></a></li>
                                 </ul>
                                 <div class="row mt-70">
-                                    <div class="col-4 text-primeira-section"> 
+                                    <div class="col-lg-4 col-md-4 col-sm-4 col-6 order-sm-1 text-primeira-section"> 
                                         <h6 class="font-size-15">WORLDWIDE CASES</h6>
                                         <span class="numero-primeira-section">235,580,685</span>
                                     </div>
-                                    <div class="col-4 text-primeira-section" style="margin-left: 12px;">
+                                    <div class="col-lg-4 col-md-4 col-sm-4 col-6 order-sm-2 text-mobile-deaths-primeira-section text-primeira-section" style="margin-left: 12px;">
                                         <h6 class="font-size-15">DEATHS</h6>
                                         <span class="numero-primeira-section">4,814,001</span>
                                     </div>
-                                    <div class="col-4 text-primeira-section" style="margin-left: -23px;">
+                                    <div class="col-lg-4 col-md-4 col-sm-4 col-6 order-sm-3 text-mobile-recovered-primeira-section text-primeira-section" style="margin-left: -23px;">
                                         <h6 class="font-size-15">RECOVERED</h6>
                                         <span class="numero-primeira-section">210,715,583</span>
                                     </div>
-                                    <span class="legenda-primeira-section"> * Last updated: Oct 03, 2021, 11:51 AM America/Chicago</span>
+                                    <span class="legenda-primeira-section order-sm-4"> * Last updated: Oct 03, 2021, 11:51 AM America/Chicago</span>
                                 </div>
                             </div>
                             <div class="col-lg-6 order-1">
