Segunda section quase pronta, faltandp a responsividade

--- a/index.html
+++ b/index.html
@@ -113,9 +113,43 @@
                     </main>
                 </div>
             </header>
-        </div>
-    
-    
+            <section class="container">
+                <div class="row bg-white secunda-section">
+                    <div class="col-lg-7 pr-5">
+                        <h5 class="titulo-um-segunda-section">ABOUT THE DISEASE</h5>
+                        <h2 class="titulo-dois-segunda-section">CORONAVIRUS (COVID-19)</h2>
+                        <p class="texto-um-secunda-section">
+                            <b>COVID-19 is a new illness that can affect your lungs and airways. </b>
+                            It's caused by a virus called coronavirus. It was discovered in December 2019 in Wuhan, Hubei, China.
+                        </p>
+                        <p class="texto-dois-secunda-section">
+                            Common signs of infection include respiratory symptoms, fever, cough, shortness of breath and breathing 
+                            difficulties.In more severe cases, infection can cause pneumonia, severe acute respiratory syndrome, kidney
+                            failure and even death.
+                        </p>
+                        <p class="texto-tres-segunda-section">
+                            Standard recommendations to prevent infection spread include regular hand washing,
+                            covering mouth and nose when coughing and sneezing, thoroughly cooking meat and eggs. 
+                            Avoid close contact with anyone showing symptoms of respiratory illness such as coughing and sneezing.
+                        </p>
+                    </div>
+                    <div class="col-lg-5" id="segunda-div">
+                        <div class="card">
+                            <ul class="list-group list-group-flush">
+                              <li class="list-group-item"><h4>What you need to know</h4> <i class="ml-13 fas fa-arrow-right"></i></li>
+                              <li class="list-group-item">How coronavirus is spread <i class="ml-13 fas fa-arrow-right"></i></li>
+                              <li class="list-group-item">Symptoms of coronavirus <i class="ml-13 fas fa-arrow-right"></i></li>
+                              <li class="list-group-item">How to protect yourself <i class="ml-13 fas fa-arrow-right"></i></li>
+                              <li class="list-group-item">Treatment for coronavirus <i class="ml-13 fas fa-arrow-right"></i></li>
+                              <li class="list-group-item"> Myth-Busters of coronavirus <i class="ml-13 fas fa-arrow-right"></i></li>
+                              <li class="list-group-item">Questions & answers <i class="ml-13 fas fa-arrow-right"></i></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+            </section>
+        </div>               
 
         <!-- JavaScript (Opcional) -->
         <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
