--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <title>Kovid19 | Coronavirus (COVID-19) Prevention & Informatics HTML Template</title>
     </head>
     <body>
-        <div style="width: 100%;">
+        
             <header  class="bg-light " id="home">
                 <div class="sobreposição div-principal">
                     <section class="container">
@@ -44,15 +44,15 @@
                                 <div class="row mt-70">
                                     <div class="col-lg-4 col-md-4 col-sm-4 col-6 order-sm-1 text-primeira-section"> 
                                         <h6 class="font-size-15">WORLDWIDE CASES</h6>
-                                        <span class="numero-primeira-section">235,580,685</span>
+                                        <div class="numero-primeira-section counter" data-count="235580685"></div>
                                     </div>
                                     <div class="col-lg-4 col-md-4 col-sm-4 col-6 order-sm-2 text-mobile-deaths-primeira-section text-primeira-section" style="margin-left: 12px;">
                                         <h6 class="font-size-15">DEATHS</h6>
-                                        <span class="numero-primeira-section">4,814,001</span>
+                                        <div class="numero-primeira-section counter" data-count="4814001"></div>
                                     </div>
                                     <div class="col-lg-4 col-md-4 col-sm-4 col-6 order-sm-3 text-mobile-recovered-primeira-section text-primeira-section" style="margin-left: -23px;">
                                         <h6 class="font-size-15">RECOVERED</h6>
-                                        <span class="numero-primeira-section">210,715,583</span>
+                                        <div class="numero-primeira-section counter" data-count="210715583"></div>
                                     </div>
                                     <span class="legenda-primeira-section order-sm-4"> * Last updated: Oct 03, 2021, 11:51 AM America/Chicago</span>
                                 </div>
@@ -131,7 +131,7 @@
             </header>
             <section class="container">
                 <div class="row bg-white secunda-section">
-                    <div class="col-lg-7 col-sm-12 pr-5">
+                    <div class="col-lg-7 col-sm-12 pr-5 responsivo">
                         <h5 class="titulo-um-segunda-section">ABOUT THE DISEASE</h5>
                         <h2 class="titulo-dois-segunda-section">CORONAVIRUS (COVID-19)</h2>
                         <p class="texto-um-secunda-section">
@@ -150,7 +150,7 @@
                         </p>
                     </div>
                     <div class="col-lg-5 col-sm-12" id="segunda-div">
-                        <div class="card-segunda-section shadow border">
+                        <div class="card-segunda-section shadow border" style="margin-top: 95px; width: 363px">
                             <ul class="list-group list-group-flush ">
                               <li class="list-group-item"><a class="texto-um" href="#"><h6>What you need to know </h6></a></li>
                                 <li class="list-group-item">
@@ -269,18 +269,93 @@
                             <i class="far fa-question-circle text-white mr-2"></i>
                             <b>Have question about spreading?</b>
                         </a>
-                        </a>
                     </div>
                 </div>
-
             </section>
-        </div>               
+            <section class="bg-white">
+                <div class="container">
+                    <div class="col-12 text-center">
+                        <h5 class="titulo-um-quarta-section">WHAT ARE THE SYMPTOMS OF COVID-19?</h5>
+                        <h2 class="titulo-dois-quarta-section">SYMPTOMS OF CORONAVIRUS</h2>
+                        <p class="texto-um-quarta-section">
+                            The most common symptoms of COVID-19 are fever, tiredness, and dry cough. Some patients may have aches and pains, nasal congestion, runny nose, sore throat or diarrhea.
+                            These symptoms are usually mild and begin gradually. Also the symptoms may appear 2-14 days after exposure.
+                        </p>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-4 col-md-4 col-sm-12">
+                            <div class="card sintomas" style="width: 20rem;">
+                                <img class="imagem-sintomas" src="http://demo.themenio.com/kovid19/images/gfx/symptom-a.png" >
+                                <div class="card-body">
+                                  <h5 class="card-title title">Fever</h5>
+                                    <p>
+                                        <b>High Fever</b> – this means you feel hot to touch on your chest or back 
+                                        (you do not need to measure your temperature). It is a common sign and also may appear 
+                                        in 2-10 days if you affected.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-4 col-sm-12">
+                            <div class="card sintomas" style="width: 20rem;">
+                                <img class="imagem-sintomas" src="http://demo.themenio.com/kovid19/images/gfx/symptom-b.png" >
+                                <div class="card-body">
+                                  <h5 class="card-title title">Cough</h5>
+                                    <p>
+                                        <b>Continuous cough</b>  – this means coughing a lot for more 
+                                        than an hour, or 3 or more coughing episodes in 24 hours 
+                                        (if you usually have a cough, it may be worse than usual).
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-4 col-sm-12">
+                            <div class="card sintomas" style="width: 20rem;">
+                                <img class="imagem-sintomas" src="http://demo.themenio.com/kovid19/images/gfx/symptom-c.png" >
+                                <div class="card-body">
+                                  <h5 class="card-title title">Shortness of breath</h5>
+                                    <p>
+                                        <b>Difficulty breathing</b>  – Around 1 out 
+                                        of every 6 people who gets COVID-19 becomes seriously ill and 
+                                        develops difficulty breathing or shortness of breath.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12">
+                        <div class="row">
+                            <div class="col-1">
+                                <i class="fas fa-exclamation-triangle icone"></i>
+                            </div>
+                            <div class="col-7">
+                                <p class="texto-terceira-section">
+                                    <b class="texto-azul">Stay at home and call your doctor: </b>
+                                    If you think you have been exposed to COVID-19 and develop a fever and any symptoms, 
+                                    such as cough or difficulty breathing, call your healthcare provider 
+                                    as soon as possible for medical advice.
+                                </p>
+                            </div>
+                            <div class="col-4">
+                                <div class="text-center mt-lg-2 mt-md-5">
+                                    <a class="btn btn-primary button-terceira-section text-white">
+                                        <i class="far fa-question-circle text-white mr-2"></i>
+                                        <b>Have question about spreading?</b>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            
 
         <!-- JavaScript (Opcional) -->
         <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
         <script src="js/app.js"></script>
     </body>
 </html>
