--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
 
         <title>Kovid19 | Coronavirus (COVID-19) Prevention & Informatics HTML Template</title>
     </head>
-    <body>
-        
+    <body><!--style="background-color: red;"-->      
             <header  class="bg-light " id="home">
                 <div class="sobreposição div-principal">
                     <section class="container">
@@ -150,7 +149,7 @@
                         </p>
                     </div>
                     <div class="col-lg-5 col-sm-12" id="segunda-div">
-                        <div class="card-segunda-section shadow border" style="margin-top: 95px; width: 363px">
+                        <div class="card-segunda-section shadow border tamanh-card">
                             <ul class="list-group list-group-flush ">
                               <li class="list-group-item"><a class="texto-um" href="#"><h6>What you need to know </h6></a></li>
                                 <li class="list-group-item">
@@ -208,7 +207,7 @@
                 </div>
 
             </section>
-            <section class="bg-light" style="width: 100vw;"> 
+            <section class="bg-light height" style="width: 100vw;"> 
                 <div class="container">
                     <div class="col-12 div-um-terceira-section">
                         <h5 class="titulo-um-terceira-section">HOW CORONAVIRUS IS SPREAD</h5>
@@ -282,9 +281,9 @@
                             These symptoms are usually mild and begin gradually. Also the symptoms may appear 2-14 days after exposure.
                         </p>
                     </div>
-                    <div class="row">
-                        <div class="col-lg-4 col-md-4 col-sm-12">
-                            <div class="card sintomas" style="width: 20rem;">
+                    <div class="row padding-row">
+                        <div class="col-lg-4 col-md-12 col-sm-12 ">
+                            <div class="card card-sintomas sintomas width-card">
                                 <img class="imagem-sintomas" src="http://demo.themenio.com/kovid19/images/gfx/symptom-a.png" >
                                 <div class="card-body">
                                   <h5 class="card-title title">Fever</h5>
@@ -296,8 +295,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-4 col-sm-12">
-                            <div class="card sintomas" style="width: 20rem;">
+                        <div class="col-lg-4 col-md-12 col-sm-12">
+                            <div class="card  card-sintomas  sintomas width-card">
                                 <img class="imagem-sintomas" src="http://demo.themenio.com/kovid19/images/gfx/symptom-b.png" >
                                 <div class="card-body">
                                   <h5 class="card-title title">Cough</h5>
@@ -309,8 +308,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-4 col-sm-12">
-                            <div class="card sintomas" style="width: 20rem;">
+                        <div class="col-lg-4 col-md-12 col-sm-12">
+                            <div class="card  card-sintomas sintomas width-card">
                                 <img class="imagem-sintomas" src="http://demo.themenio.com/kovid19/images/gfx/symptom-c.png" >
                                 <div class="card-body">
                                   <h5 class="card-title title">Shortness of breath</h5>
@@ -323,12 +322,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12">
+                    <div class="col-12 mt-5">
                         <div class="row">
-                            <div class="col-1">
+                            <div class="col-lg-1 col-md-3 col-2 ">
                                 <i class="fas fa-exclamation-triangle icone"></i>
                             </div>
-                            <div class="col-7">
+                            <div class="col-lg-7 col-md-7 col-10 ">
                                 <p class="texto-terceira-section">
                                     <b class="texto-azul">Stay at home and call your doctor: </b>
                                     If you think you have been exposed to COVID-19 and develop a fever and any symptoms, 
@@ -336,13 +335,159 @@
                                     as soon as possible for medical advice.
                                 </p>
                             </div>
-                            <div class="col-4">
-                                <div class="text-center mt-lg-2 mt-md-5">
+                            <div class="col-lg-4 com-md-12 col-sm-12">
+                                <div class="text-center mt-lg-2 mt-md-5 mt-5">
                                     <a class="btn btn-primary button-terceira-section text-white">
                                         <i class="far fa-question-circle text-white mr-2"></i>
                                         <b>Have question about spreading?</b>
                                     </a>
                                 </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="bg-light bottom">
+                <div class="container">
+                    <div class="col-12 mb-5 text-center">
+                        <h5 class="titulo-um-quinta-section">HOW TO PROTECT YOURSELF?</h5>
+                        <h2 class="titulo-dois-quinta-section">PREVENTION & ADVICE</h2>
+                        <p class="texto-um-quinta-section">
+                            There is currently no vaccine to prevent coronavirus disease 2019 (COVID-19).
+                            The best way to prevent illness is to avoid being exposed to this virus. 
+                            Stay aware of the latest information
+                            on the COVID-19 outbreak, available on the WHO website and 
+                            through your national and local public health authority.
+                        </p>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-3 col-md-6 col-sm-6 col-12 text-center">
+                            <div >
+                                <img class="img-quinta" src="http://demo.themenio.com/kovid19/images/gfx/advice-a.png">
+                            </div>
+                            <div class="box-quinta">
+                                <h5 class="title-quinta">Wash your hands frequently</h5>
+                                <p class="text-quinta">
+                                    Regularly and thoroughly 
+                                    clean your hands with an alcohol-based 
+                                    hand rub or wash them with soap and 
+                                    water for at least 20 seconds.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="col-3  col-lg-3 col-md-6 col-sm-6 col-12 text-center">
+                            <div>
+                                <img class="img-quinta" src="http://demo.themenio.com/kovid19/images/gfx/advice-b.png">
+                            </div>
+                            <div class="box-quinta">
+                                <h5 class="title-quinta">Maintain social distancing</h5>
+                                <p class="text-quinta">
+                                    Maintain at least 1 metre (3 feet) 
+                                    distance between yourself & anyone who is 
+                                    coughing or sneezing. If you are too close, get chance to infected.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="col-3 col-lg-3 col-md-6 col-sm-6 col-12 text-center">
+                            <div>
+                                <img class="img-quinta" src="http://demo.themenio.com/kovid19/images/gfx/advice-c.png">
+                            </div>
+                            <div class="box-quinta">
+                                <h5 class="title-quinta">Avoid touching face</h5>
+                                <p class="text-quinta">
+                                    Hands touch many surfaces and 
+                                    can pick up viruses. So, hands can transfer the virus to 
+                                    your eyes, nose or mouth and can make you sick.
+                                </p>
+                            </div>
+
+                        </div>
+                        <div class="col-3 col-lg-3 col-md-6 col-sm-6 col-12 text-center">
+                            <div>
+                                <img class="img-quinta" src="http://demo.themenio.com/kovid19/images/gfx/advice-d.png">
+                            </div>
+                           <div class="box-quinta">
+                            <h5 class="title-quinta">Practice respiratory hygiene</h5>
+                            <p class="text-quinta">
+                                Maintain good 
+                                respiratory hygiene as covering your mouth & nose with your
+                                bent elbow or tissue when cough or sneeze.
+                            </p>
+                           </div>
+                        </div>
+                        
+                    </div>
+                    <div class="col-12">
+                        <ul id="quinta-section">
+                            <li>
+                                <a class="getstarted scrollto button-box-quinta" href="#">
+                                    Check how you wash hand
+                                    <i class="ml-13  fas fa-arrow-right"></i>
+                                </a>
+                            </li>
+                            <li class="ml-2 mt-lg-0 mt-md-0 mt-5">
+                                <a style="color: #2a81ea !important; background-color: unset;" class="button-box-quinta getstarted scrollto" href="#">
+                                    Q&A on Coronaviruses
+                                    <i class="ml-13 fas fa-arrow-right"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
+            <section class="bg-light top height-section">
+                <div class="container">
+                    <div class="div-box-grande">
+                        <div class="row">
+                            <div class="col-lg-8 col-md-8 col-sm-12 col-12 padding-box">
+                              <h4 class="box-titulo">Take steps to protect others</h4>  
+                              <div class="padding-box">
+                                <p class="box-texto">
+                                    <i class="icone-check fas fa-check-circle"></i>
+                                    <b class="negrito-prevenção">Stay home if you’re sick </b> 
+                                    -Stay home if you are sick, except to get medical care.
+                                </p>
+                                <p class="box-texto">
+                                    <i class=" icone-check fas fa-check-circle"></i>
+                                    <b class="negrito-prevenção">Cover your mouth and nose</b> 
+                                    – with a tissue when you cough or sneeze (throw used
+                                    tissues in the trash) or use the inside of your elbow.
+                                </p>
+                                <p class="box-texto">
+                                    <i class="icone-check fas fa-check-circle"></i>
+                                    <b>Wear a facemask if you are sick</b>
+                                    – You should wear a facemask 
+                                    when you are around other people (e.g., sharing a room or vehicle) 
+                                    and before you enter a healthcare provider’s
+                                </p>
+                                <p class="box-texto">
+                                    <i class="icone-check fas fa-check-circle"></i>
+                                    <b class="negrito-prevenção">Clean AND disinfect frequently touched surfaces daily</b>
+                                    – This includes phones, tables, 
+                                    light switches, doorknobs, countertops, handles, desks, toilets, faucets, and sinks.
+                                </p>
+                                <p class="box-texto">
+                                    <i class="icone-check fas fa-check-circle"></i>
+                                    <b class="negrito-prevenção">Clean the dirty surfaces </b>
+                                   – Use detergent or soap and water prior to disinfection.
+                                </p>
+                                <p class="box-texto">
+                                    <i class="icone-check fas fa-check-circle"></i>
+                                    <b class="negrito-prevenção">Stay informed about the local COVID-19 situation </b>
+                                    – Get up-to-date information about local COVID-19 activity 
+                                    from <a href="#">public health officials.</a>
+                                </p>
+                                <p class="box-texto">
+                                    <i class="icone-check fas fa-check-circle"></i>
+                                    <b class="negrito-prevenção">Dedicated, lined trash can </b>
+                                    – If possible, dedicate a lined 
+                                    trash can for the ill person. Use gloves when removing garbage bags,
+                                     and handling & disposing of trash.
+                                </p>
+                              </div>
+                            </div>
+                            <div class="col-lg-4 col-md-12 col-sm-12 col-12">
+                                <img class="img-sexta-section" src="http://demo.themenio.com/kovid19/images/gfx/steps.png">
                             </div>
                         </div>
                     </div>
