Setima section finalizada com responsividade

--- a/index.html
+++ b/index.html
@@ -493,7 +493,64 @@
                     </div>
                 </div>
             </section>
-            
+            <section class="bg-light margin-negativa">
+                <div class="container mt-5 pt-5">
+                    <div class="col-12 text-center">
+                        <h4 class="titulo-setima-section"><b>Follow steps to wash hands</b></h4>
+                       <a  class="subtitulo-setima" href="#"> <span>Why do I need wash hand <i class="fas fa-arrow-right"></i></span></a>
+                    </div>
+                    <div class="row margin">
+                        <div class="col-lg-2  col-md-4 col-sm-12 col-12">
+                            <div >
+                                <img class="img-setima"src="http://demo.themenio.com/kovid19/images/gfx/hand-a.png">
+                            </div>
+                            <div>
+                                <h6 class="title-setima">Soap on Hand</h6>
+                            </div>
+                        </div>
+                        <div class="col-lg-2  col-md-4 col-sm-12 col-12">
+                            <div >
+                                <img class="img-setima" src="http://demo.themenio.com/kovid19/images/gfx/hand-b.png">
+                            </div>
+                            <div>
+                                <h6 class="title-setima">Palm to Palm</h6>
+                            </div>
+                        </div>
+                        <div class="col-lg-2  col-md-4 col-sm-12 col-12">
+                            <div >
+                                <img class="img-setima" src="http://demo.themenio.com/kovid19/images/gfx/hand-c.png">
+                            </div>
+                            <div>
+                                <h6 class="title-setima">Between Fingers</h6>
+                            </div>
+                        </div>
+                        <div class="col-lg-2  col-md-4 col-sm-12 col-12">
+                            <div >
+                                <img class="img-setima" src="http://demo.themenio.com/kovid19/images/gfx/hand-d.png">
+                            </div>
+                            <div>
+                                <h6 class="title-setima">Back to Hands</h6>
+                            </div>
+                        </div>
+                        <div class="col-lg-2  col-md-4 col-sm-12 col-12">
+                            <div >
+                                <img class="img-setima" src="http://demo.themenio.com/kovid19/images/gfx/hand-e.png">
+                            </div>
+                            <div>
+                                <h6 class="title-setima">Clean with Water</h6>
+                            </div>
+                        </div>
+                        <div class="col-lg-2  col-md-4 col-sm-12 col-12">
+                            <div >
+                                <img class="img-setima"src="http://demo.themenio.com/kovid19/images/gfx/hand-f.png">
+                            </div>
+                            <div>
+                                <h6 class="title-setima">Focus on Wrist</h6>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
 
         <!-- JavaScript (Opcional) -->
         <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
