Oitava section finalizada com responsividade, so com bg-color sem a imagem

--- a/index.html
+++ b/index.html
@@ -551,6 +551,59 @@
                     </div>
                 </div>
             </section>
+            <section class=" bg-img">
+                <div class="bg-section-color">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-lg-6 col-md-12 col-sm-12 espacamento">
+                                <h5 class="subtitulo-oitava">BE CAREFULL & STAY SAFE</h5>
+                                <h2 class="titulo-oitva">TREATMENT FOR CORONAVIRUS</h2>
+                                <p class="p-oitava">
+                                    <b class="b-oitava">
+                                        To date, there is no vaccine and no specific 
+                                        antiviral medicine to prevent or treat COVID-2019.
+                                    </b>
+                                    However, those affected should receive care to relieve 
+                                    symptoms. People with serious illness should be hospitalized.
+                                    Most patients recover thanks to supportive care.
+                                </p>
+                                <p class="p-oitava">
+                                    Antibiotics do not help, as they do not work against viruses. 
+                                    Treatment aims to relieve the symptoms while your 
+                                    body fights the illness. You'll need to stay in isolation, away 
+                                    from other people, until you have recovered.
+                                </p>
+                            </div>
+                            <div class="col-lg-4 col-md-6 col-sm-4 box-care  ml">
+                                <h6><b>Self Care</b></h6>
+                                <p>If you have mild symptoms, stay at home until you’ve recovered. You can relieve your symptoms if you:</p>
+                                <p class="position-relative ml-3">
+                                    <i class="fas fa-arrow-right arrow-posicao"></i>
+                                    Rest and sleep
+                                </p>
+                                <p class="position-relative ml-3">
+                                    <i class="fas fa-arrow-right arrow-posicao"></i>
+                                    Keep warm
+                                </p>
+                                <p class="position-relative ml-3">
+                                    <i class="fas fa-arrow-right arrow-posicao"></i>
+                                    Drink plenty of liquids
+                                </p>
+                                <p class="position-relative ml-3"> 
+                                    <i class="fas fa-arrow-right arrow-posicao"></i>
+                                    Use a room humidifier or take a hot shower to help ease a sore throat and cough
+                                </p>
+                                <h6 class="mt-4"><b>Medical Treatments</b></h6>
+                                <p>
+                                    If you develop a fever, cough, and have difficulty breathing, promptly seek medical care.
+                                     Call in advance and tell your health provider of any recent travel or recent contact with travelers.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            
 
         <!-- JavaScript (Opcional) -->
         <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
