--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
 
         <title>Kovid19 | Coronavirus (COVID-19) Prevention & Informatics HTML Template</title>
     </head>
-    <body><!--style="background-color: red;"-->      
-            <header  class="bg-light " id="home">
+    <body><!--style="background-color: red;"-->  
+
+        <header  class="bg-light " id="home">
                 <div class="sobreposição div-principal">
                     <section class="container">
                         <div class="row">
@@ -127,8 +128,9 @@
                         </div>
                     </main>
                 </div>
-            </header>
-            <section class="container">
+        </header>
+
+        <section class="container">
                 <div class="row bg-white secunda-section">
                     <div class="col-lg-7 col-sm-12 pr-5 responsivo">
                         <h5 class="titulo-um-segunda-section">ABOUT THE DISEASE</h5>
@@ -206,8 +208,9 @@
                     </div>
                 </div>
 
-            </section>
-            <section class="bg-light height" style="width: 100vw;"> 
+        </section>
+
+        <section class="bg-light height" style="width: 100vw;"> 
                 <div class="container">
                     <div class="col-12 div-um-terceira-section">
                         <h5 class="titulo-um-terceira-section">HOW CORONAVIRUS IS SPREAD</h5>
@@ -270,8 +273,9 @@
                         </a>
                     </div>
                 </div>
-            </section>
-            <section class="bg-white">
+        </section>
+
+        <section class="bg-white">
                 <div class="container">
                     <div class="col-12 text-center">
                         <h5 class="titulo-um-quarta-section">WHAT ARE THE SYMPTOMS OF COVID-19?</h5>
@@ -346,8 +350,9 @@
                         </div>
                     </div>
                 </div>
-            </section>
-            <section class="bg-light bottom">
+        </section>
+
+        <section class="bg-light bottom">
                 <div class="container">
                     <div class="col-12 mb-5 text-center">
                         <h5 class="titulo-um-quinta-section">HOW TO PROTECT YOURSELF?</h5>
@@ -434,8 +439,9 @@
                         </ul>
                     </div>
                 </div>
-            </section>
-            <section class="bg-light top height-section">
+        </section>
+
+        <section class="bg-light top height-section">
                 <div class="container">
                     <div class="div-box-grande">
                         <div class="row">
@@ -492,8 +498,9 @@
                         </div>
                     </div>
                 </div>
-            </section>
-            <section class="bg-light margin-negativa">
+        </section>
+
+        <section class="bg-light margin-negativa">
                 <div class="container mt-5 pt-5">
                     <div class="col-12 text-center">
                         <h4 class="titulo-setima-section"><b>Follow steps to wash hands</b></h4>
@@ -550,8 +557,9 @@
                         </div>
                     </div>
                 </div>
-            </section>
-            <section class=" bg-img">
+        </section>
+
+        <section class=" bg-img">
                 <div class="bg-section-color">
                     <div class="container">
                         <div class="row">
@@ -574,7 +582,7 @@
                                     from other people, until you have recovered.
                                 </p>
                             </div>
-                            <div class="col-lg-4 col-md-6 col-sm-4 box-care  ml">
+                            <div class="col-lg-4 col-md-6 col-sm-4 box-care  ml"  style="font-family: 'Roboto Condensed', sans-serif;">
                                 <h6><b>Self Care</b></h6>
                                 <p>If you have mild symptoms, stay at home until you’ve recovered. You can relieve your symptoms if you:</p>
                                 <p class="position-relative ml-3">
@@ -602,8 +610,96 @@
                         </div>
                     </div>
                 </div>
-            </section>
-            
+        </section>
+
+        <section class="bg-light">
+            <div class="container">
+                <div class="col-12 text-center">
+                    <h5 class="subtitulo-nona">DO’S & DON’TS</h5>
+                    <h2 class="titulo-nona">PROTECT YOURSELF</h2>
+                    <p class="texto-nona">
+                        The best thing you can do now is plan for how you can 
+                        adapt your daily routine. Take few steps to protect yourself 
+                        as Clean your hands often, Avoid close contact, Cover coughs and sneezes, 
+                        clean daily used surfaces etc. The best way to prevent illness 
+                        is to avoid being exposed to this virus.
+                    </p>
+                </div>
+                <div class="row mt-3 pt-5 justify-content-center">
+                    <div class="col-lg-6 col-md-12 col-md-12 col-sm-12 col-12 mt-1 text-center nona-um">
+                        <img class="img-nona"  src="http://demo.themenio.com/kovid19/images/gfx/protect.png" >
+                    </div>
+                    <div class="col-lg-3 mt-md-5 col-6 mt-lg-0 mt-md-5 mt-5 nona-dois">
+                        <div class="position-relative conteudo-lateral-left">
+                            <div class="texto-img-nona">
+                                <b class="mr-lg-2 mr-md-2 mr-sm-2">Avoid Close Contact</b>
+                            </div>
+                            <div class="div-imagem-protecao">
+                                <img class="imagem-border-protecao" 
+                                src="http://demo.themenio.com/kovid19/images/gfx/donts-a.png">
+                                <i class="fas fa-times-circle"></i>
+                                <div class="pontilhado-1"></div>
+                            </div>
+                        </div>
+                        <div class="position-relative conteudo-lateral-left">
+                            <div class="texto-img-nona">
+                                <b class="mr-lg-3 mr-md-3 mr-sm-3">Don’t Touch Face</b>
+                            </div>
+                            <div class="div-imagem-protecao">
+                                <img class="imagem-border-protecao" 
+                                src="http://demo.themenio.com/kovid19/images/gfx/donts-b.png">
+                                <i class="fas fa-times-circle"></i>
+
+                                <div class="pontilhado-1"></div>
+                            </div>
+                        </div>
+                        <div class="position-relative conteudo-lateral-left">
+                            <div class="texto-img-nona">
+                                <b class="mr-lg-3 mr-md-3 mr-sm-3">Social Distancing</b>
+                            </div>
+                            <div class="div-imagem-protecao">
+                                <img class="imagem-border-protecao" 
+                                src="http://demo.themenio.com/kovid19/images/gfx/donts-c.png">
+                                <i class="fas fa-times-circle"></i>
+                                <div class="pontilhado-1"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-5 col-6 mt-lg-0 mt-md-5 mt-5 nona-tres">
+                        <div class="position-relative conteudo-lateral-right">
+                            <div class="div-imagem-protecao">
+                                <div class="pontilhado-2"></div>
+                                <i class="fas fa-check-circle check-protecao"></i>
+                                <img class="imagem-border-protecao" src="http://demo.themenio.com/kovid19/images/gfx/dos-a.png">
+                            </div>
+                            <div class="texto-img-nona">
+                                <b class="ml-lg-3 ml-md-3 ml-sm-3">Wash Your Hands</b>
+                            </div>
+                        </div>
+                        <div class="position-relative conteudo-lateral-right">
+                            <div class="div-imagem-protecao">
+                                <div class="pontilhado-2"></div>
+                                <i class="fas fa-check-circle check-protecao"></i>
+                                <img class="imagem-border-protecao" src="http://demo.themenio.com/kovid19/images/gfx/dos-b.png">
+                            </div>
+                            <div class="texto-img-nona">
+                                <b class="ml-lg-3 ml-md-3 ml-sm-3">Drink Much Watar</b>
+                            </div>
+                        </div>
+                        <div class="position-relative conteudo-lateral-right">
+                            <div class="div-imagem-protecao">
+                                <div class="pontilhado-2"></div>
+                                <i class="fas fa-check-circle check-protecao"></i>
+                                <img class="imagem-border-protecao" src="http://demo.themenio.com/kovid19/images/gfx/dos-c.png">
+                            </div>
+                            <div class="texto-img-nona">
+                                <b class="ml-lg-3 ml-md-3 ml-sm-3">Use Face Mask</b>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <!-- JavaScript (Opcional) -->
         <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
